@@ -32,12 +32,6 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 
-override_dh_quilt_patch:
-	dh_quilt_patch
-
-override_dh_quilt_unpatch:
-	dh_quilt_unpatch
-
 #override_dh_strip:
 #        dh_strip -plibnx-x11 --dbg-package=libnx-x11-dbg
 #        dh_strip -plibxcomp3 --dbg-package=libxcomp-dbg
