@@ -17,6 +17,7 @@ nx-libs (2:3.5.0.16-0) UNRELEASED; urgency=low
     if NX gets installed via the tarball installation method.
   * Modify patch: 001_add-main-makefile.full+lite.patch. Add uninstall
     routine.
+  * Dropping empty override rules for quilt patch from /debian/rules.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 21 Sep 2012 10:06:54 +0200
 
